Terminologie generale uniformisée dans tout l'article: sheet -> film, floor and ceiling -> bottom and top walls, lateral load -> transverse load, laterally -> transversely
Lateral size of the blister -> longitudinal

--- a/fig_plis/article_plis.tex
+++ b/fig_plis/article_plis.tex
@@ -47,16 +47,16 @@ Yet, in a biological context, thin tissues (epithelimum, endothelium) are \seb{n
 \sseb{such as wrinkles encountered while putting up}
 \sseb{ wall paper~\cite{Pacione1991}.} \seb{Therefore benchmark experiments that explore the possibility of wrinkling in confined soft materials immersed in a buoyancy-matched viscous medium are in line to get fundamental insights into such a biologically relevant situation.}
 
-Here, we introduce model permeable biogels that produce hierarchical wrinkling as a result of their interplay between their gelation dynamics and the confinement conditions. In slit geometry, we slowly acidify a dispersion of casein, one of the milk proteins.  As a result, not only does the casein form a gel as expected~\cite{Leocmach2014} \seb{\it citer plutot une ref historique} --this is a well-known effect used in cheese or yogurt making-- but the gel starts to produce wrinkling patterns in cascade when casein adhesion to the slit wall is turned off. Using a combination of rheology, light microscopy and confocal microscopy, we demonstrate that upon acidification the casein network spontaneously shrinks then swells at the micron level and wrinkles at the millimeter scale. \seb{We systematically investigate such} swelling-induced wrinkling of a porous gel sheet sandwiched between two viscous layers, the whole system being confined between two glass plates. As shown in Fig.~\ref{fig:dynamics} \seb{and in Supplemental Movies}, lateral confinement leads to saturation of the amplitude on both the top and bottom walls followed by a cascade of secondary and ternary buckling. Such cascade buckling has already been observed by~\cite{Roman1999} in a one-dimensional macroscopic system, a sheet of steel forced to buckle \seb{between two solid plates}. The two-dimensional nature of our experiment creates nested patterns that could prove useful to design original optical elements. \seb{\it Mettre plutot la phrase precedente en discussion/conclusion ?} In addition one has to note that the primary wavelength is much smaller than the size of the system, implying that a simple buckling scenario \seb{cannot explain the observations in Fig.~\ref{fig:dynamics}} and that only a wrinkling instability \seb{can be invoked}. 
+Here, we introduce model permeable biogels that produce hierarchical wrinkling as a result of their interplay between their gelation dynamics and the confinement conditions. In slit geometry, we slowly acidify a dispersion of casein, one of the milk proteins.  As a result, not only does the casein form a gel as expected~\cite{Leocmach2014} \seb{\it citer plutot une ref historique} --this is a well-known effect used in cheese or yogurt making-- but the gel starts to produce wrinkling patterns in cascade when casein adhesion to the slit wall is turned off. Using a combination of rheology, light microscopy and confocal microscopy, we demonstrate that upon acidification the casein network spontaneously shrinks then swells at the micron level and wrinkles at the millimeter scale. \seb{We systematically investigate such} swelling-induced wrinkling of a porous gel film sandwiched between two viscous layers, the whole system being confined between two glass plates. As shown in Fig.~\ref{fig:dynamics} \seb{and in Supplemental Movies}, transverse confinement leads to saturation of the amplitude on both the top and bottom walls followed by a cascade of secondary and ternary buckling. Such cascade buckling has already been observed by~\cite{Roman1999} in a one-dimensional macroscopic system, a sheet of steel forced to buckle \seb{between two solid plates}. The two-dimensional nature of our experiment creates nested patterns that could prove useful to design original optical elements. \seb{\it Mettre plutot la phrase precedente en discussion/conclusion ?} In addition one has to note that the primary wavelength is much smaller than the size of the system, implying that a simple buckling scenario \seb{cannot explain the observations in Fig.~\ref{fig:dynamics}} and that only a wrinkling instability \seb{can be invoked}. 
 
 \begin{figure}[ht!]
 	\includegraphics{dynamics}
-	\caption{Dynamics of pattern formation \seb{in a confined sheet of casein gel}. (a) Light transmission microscopy. The same area is highlighted in yellow on all panels to show that the initial pattern is not evolving. (b) 3D reconstruction from fluorescent confocal microscopy. (c) Fourier spectra of binary altitudes of (a) corresponding to primary, secondary and tertiary patterns. Inset: reconstructed binary altitudes at time \SI{2}{\hour}. Scale bars are \SI{1}{\milli\metre}. \seb{\it Indiquer la composition du gel~?}}
+	\caption{Dynamics of pattern formation \seb{in a confined film of casein gel}. (a) Light transmission microscopy. The same area is highlighted in yellow on all panels to show that the initial pattern is not evolving. (b) 3D reconstruction from fluorescent confocal microscopy. (c) Fourier spectra of binary altitudes of (a) corresponding to primary, secondary and tertiary patterns. Inset: reconstructed binary altitudes at time \SI{2}{\hour}. Scale bars are \SI{1}{\milli\metre}. \seb{\it Indiquer la composition du gel~?}}
 	\label{fig:dynamics}
 \end{figure}
 
 The main goal of the present study is thus to identify the selection mechanism of the wavelength  \seb{and to discuss its implication for practical situations (?)}. In the following we first describe the physical chemistry that allows us to form such patterns. Then we  model the situation and identify two possible selection mechanisms, namely porous Darcy flow or viscous Poiseuille flow. Comparing our experimental data to these two models we finally show that \sseb{a model based on} a combination of both Darcy and Poiseuille mechanisms accurately describes our data. This combined model pins down the dynamical origin of the constraints exerted on the gel and nicely predicts the wrinkling wavelength.
-%Poiseuille~\cite{Poiseuille1842} flows of the solvent above and below the gel layer for long wavelengths and a new mechanism, Darcy~\cite{Darcy1856} flows of the solvent through the gel layer for short wavelengths.
+%Poiseuille~\cite{Poiseuille1842} flows of the solvent above and below the gel film for long wavelengths and a new mechanism, Darcy~\cite{Darcy1856} flows of the solvent through the gel film for short wavelengths.
 
 \section*{Pattern formation}
 
@@ -70,13 +70,13 @@ The main goal of the present study is thus to identify the selection mechanism o
 
 The slow acidification of a protein (sodium caseinate) solution down to the isoelectric pH induces gelation (Fig.~\ref{fig:acidification}a). Since caseins strongly adsorb to interfaces, the resulting gel sticks to the container walls, allowing rheological measurements (Fig.~\ref{fig:acidification}b). Further decrease of the pH beyond the isoeletric point weakens the gel \seb{due to \dots} \seb{\it Il manque une explication ici ainsi que des references generales sur la prise du yaourt}. This nonmonotonic behaviour of the elastic modulus translates into a nonmonotonic mesh size in a microscopy cell (slit geometry) coated so that the casein cannot adsorb on the top wall (Fig.~\ref{fig:acidification}c), i.e. into syn\ae{}resis (solvent expulsion) followed by swelling.
 
-Figure~\ref{fig:sideview}a shows confocal measurements in the case where both top and bottom walls have been coated. Starting from a homogeneous solution (black margins correspond to the glass walls), the gel forms and simultaneously expells solvent on both sides. Since two interfaces \seb{clearly separate} a protein-rich phase and a protein-poor (water) phase, we model the resulting situation as a porous elastic sheet of thickness $h$ sandwiched between two viscous layers of respective thicknesses $H_1$ and $H_2$ \seb{in a cell of thickness $e=H_1+h+H_2$} (Fig.~\ref{fig:sideview}d) \seb{\it $e$ n'etait defini nulle part + attention sur la Fig.~3c il vaudrait mieux choisir de montrer $H_1$ et $H_2$ a un endroit ou le gel est horizontal, sinon le schema n'est valable qu'aux petites deformations + du coup ce sera it mieux de mettre le schema en 3b ?}. Relative increase in protein concentration during syn\ae{}resis can be deduced from the brighter fluorescence in the second panel of Fig.~\ref{fig:sideview}a. Extracting the top and bottom surface of the gel phase allows for quantitative measurements of the relative volume (Fig.~\ref{fig:sideview}b) and excess surface area of the gel layer (Fig.~\ref{fig:sideview}c). This confirms that the instability is due to swelling.
+Figure~\ref{fig:sideview}a shows confocal measurements in the case where both top and bottom walls have been coated. Starting from a homogeneous solution (black margins correspond to the glass walls), the gel forms and simultaneously expells solvent on both sides. Since two interfaces \seb{clearly separate} a protein-rich phase and a protein-poor (water) phase, we model the resulting situation as a porous elastic film of thickness $h$ sandwiched between two viscous layers of respective thicknesses $H_1$ and $H_2$ \seb{in a cell of thickness $e=H_1+h+H_2$} (Fig.~\ref{fig:sideview}d) \seb{\it $e$ n'etait defini nulle part + attention sur la Fig.~3c il vaudrait mieux choisir de montrer $H_1$ et $H_2$ a un endroit ou le gel est horizontal, sinon le schema n'est valable qu'aux petites deformations + du coup ce sera it mieux de mettre le schema en 3b ?}. Relative increase in protein concentration during syn\ae{}resis can be deduced from the brighter fluorescence in the second panel of Fig.~\ref{fig:sideview}a. Extracting the top and bottom surface of the gel phase allows for quantitative measurements of the relative volume (Fig.~\ref{fig:sideview}b) and excess surface area of the gel film (Fig.~\ref{fig:sideview}c). This confirms that the instability is due to swelling.
 
-Note that adhesion to side walls is necessary to prevent total syn\ae{}resis and thus allow subsequent planar stresses to develop while swelling: the only situation were wrinkling was observed is when both top and bottom walls are coated. We also confirmed that at any given \seb{point in time and space} the thickness $h$ of the sheet of gel is homogeneous. The contrast in transmission microscopy (Fig.~\ref{fig:dynamics}a) is \seb{therefore} not due to thickness inhomogeneities but to altitude gradients. \seb{Indeed} the length of the optical path (along \seb{the vertical direction} $z$) through the gel phase is larger where the gel makes a slope compared to a flat situation, as indicated by the yellow vertical lines in Fig.~\ref{fig:sideview}d.
+Note that adhesion to side walls is necessary to prevent total syn\ae{}resis and thus allow subsequent planar stresses to develop while swelling: the only situation were wrinkling was observed is when both top and bottom walls are coated. We also confirmed that at any given \seb{point in time and space} the thickness $h$ of the film of gel is homogeneous. The contrast in transmission microscopy (Fig.~\ref{fig:dynamics}a) is \seb{therefore} not due to thickness inhomogeneities but to altitude gradients. \seb{Indeed} the length of the optical path (along \seb{the vertical direction} $z$) through the gel phase is larger where the gel makes a slope compared to a flat situation, as indicated by the yellow vertical lines in Fig.~\ref{fig:sideview}d.
 
 \begin{figure}
 	\includegraphics{sideview}
-	\caption{Measurements and modeling. (a) Confocal ($x$,$z$) cuts showing syn\ae{}resis, swelling and (cascade) wrinkling. Scale bar is \SI{100}{\micro\metre} (real size ratio). Evolution of (b) volume of the gel phase relative to cell volume and (c) excess area measured by confocal microscopy. Crosses correspond to times in (a). (d) Schematic side view of the cell. The constant thickness gel layer (orange) is surrounded by water. Yellow lines show the path of transmitted light through the gel phase. A region of interest is highlighted in gray.}
+	\caption{Measurements and modeling. (a) Confocal ($x$,$z$) cuts showing syn\ae{}resis, swelling and (cascade) wrinkling. Scale bar is \SI{100}{\micro\metre} (real size ratio). Evolution of (b) volume of the gel phase relative to cell volume and (c) excess area measured by confocal microscopy. Crosses correspond to times in (a). (d) Schematic side view of the cell. The constant thickness gel film (orange) is surrounded by water. Yellow lines show the path of transmitted light through the gel phase. A region of interest is highlighted in gray.}
 	\label{fig:sideview}
 \end{figure}
 
@@ -84,7 +84,7 @@ Note that adhesion to side walls is necessary to prevent total syn\ae{}resis and
 
 \seb{\it Ajouter une transition: en l'etat le passage au modele est trop brutal.}
 
-The characteristic length $\lambda^*$ of a wrinkling pattern is set by the competition between the flexural modulus of the sheet $B=E/(1-\nu^2)$ ($E$ Young modulus, $\nu$ Poisson ratio) and a lateral load $\sigma_\perp$~\cite{Vella2009,Kolinski2009}: 
+The characteristic length $\lambda^*$ of a wrinkling pattern is set by the competition between the flexural modulus of the film $B=E/(1-\nu^2)$ ($E$ Young modulus, $\nu$ Poisson ratio) and a transverse load $\sigma_\perp$~\cite{Vella2009,Kolinski2009}: 
 \begin{equation}
 \lambda^* \sim h \left(\frac{B}{\sigma_\perp}\right)^{1/3}.
 \label{eq:lstar}
@@ -92,7 +92,7 @@ The characteristic length $\lambda^*$ of a wrinkling pattern is set by the compe
 For small deflections the actual wavelength $\lambda$ is related to $\lambda^*$ and to the \seb{wrinkle} amplitude $A$ as $\lambda \sim A^{1/4} \lambda^{*3/4}$.
 
 % Pour Mathieu : ajouter quelque part des applications numériques pour les trois longueurs d'ondes gravité, Darcy, Poiseuille
-We identify three possible candidates for the lateral load $\sigma_\perp$: the weight or buoyancy of the gel, the porous flow through the gel or the viscous flows in the surrounding water layers. We confirmed that the former plays no significant role by successfully repeating our experiment in a cell held vertically, i.e. with the weight acting longitudinally rather than laterally.
+We identify three possible candidates for the transverse load $\sigma_\perp$: the weight or buoyancy of the gel, the porous flow through the gel or the viscous flows in the surrounding water layers. We confirmed that the former plays no significant role by successfully repeating our experiment in a cell held vertically, i.e. with the weight acting longitudinally rather than transversely.
 
 \begin{figure*}
 	\includegraphics{Darcy_vs_Poiseuille}
@@ -100,17 +100,17 @@ We identify three possible candidates for the lateral load $\sigma_\perp$: the w
 	\label{fig:DarcyPoiseuille}
 \end{figure*}
 
-In a first limit where the sheet of gel would be sitting (\seb{without} sticking) to the floor of the cell ($H_1\rightarrow0$), creating a 2D blister requires flowing solvent of viscosity $\eta$ through the gel of permeability $\alpha$. Darcy law relates the pressure gradient (\seb{estimated as} $\sigma_\perp/h$) to the volume flux per unit area $v = \frac{\alpha}{\eta}\frac{\sigma_\perp}{h} = \frac{dA}{dt}$. Injecting this expression in Eq.~(\ref{eq:lstar}) yields the wavelength of the Darcy mode as
+In a first limit where the film of gel would be sitting (\seb{without} sticking) to the bottom wall of the cell ($H_1\rightarrow0$), creating a 2D blister requires flowing solvent of viscosity $\eta$ through the gel of permeability $\alpha$. Darcy law relates the pressure gradient (\seb{estimated as} $\sigma_\perp/h$) to the volume flux per unit area $v = \frac{\alpha}{\eta}\frac{\sigma_\perp}{h} = \frac{dA}{dt}$. Injecting this expression in Eq.~(\ref{eq:lstar}) yields the wavelength of the Darcy mode as
 \begin{equation}
 \lambda_D \sim h^{1/2} \alpha^{1/4} \Upsilon^{1/4}
 \end{equation}
-where $\Upsilon = B\tau/\eta$ is a dimensionless viscoelastic factor quantifying the relative stiffness of the sheet and the solvent at a characteristic time $\tau$. This expression emphasizes the kinetic nature of the wavelength selection \seb{through Darcy flow}. However we note that the wavelength of (a generation of) the pattern does not evolve with time (see Fig.~\ref{fig:dynamics}a and Sup. Fig.~\ref{fig:growth}) once the gel is touching both walls, we can deduce the relevant $\tau$ from the growth of the  pattern (see Supplementary Method for the precise definition). \seb{\it La phrase precedente n'est pas assez claire et semble contredire le texte en supplementary : a reformuler.}
+where $\Upsilon = B\tau/\eta$ is a dimensionless viscoelastic factor quantifying the relative stiffness of the film and the solvent at a characteristic time $\tau$. This expression emphasizes the kinetic nature of the wavelength selection \seb{through Darcy flow}. However we note that the wavelength of (a generation of) the pattern does not evolve with time (see Fig.~\ref{fig:dynamics}a and Sup. Fig.~\ref{fig:growth}) once the gel is touching both walls, we can deduce the relevant $\tau$ from the growth of the  pattern (see Supplementary Method for the precise definition). \seb{\it La phrase precedente n'est pas assez claire et semble contredire le texte en supplementary : a reformuler.}
 
-The opposite limiting case is when the gel layer lies in the middle of the cell ($H_1=H_2$) and impermeable ($\alpha\rightarrow 0$). There destabilisation over a wavelength $\lambda$ creates a lubrication ($H\ll\lambda$) flow in the viscous layers. By symmetry the lateral load across the gel $\sigma_\perp$ is also the pressure difference over the wavelength. Using a Poiseuille profile for the flow, $\frac{dA}{dt} \sim \sigma_\perp \frac{H^3}{\eta\lambda^2}$. Injecting this expression in Eq.~(\ref{eq:lstar}) yields the wavelength of the Poiseuille mode as
+The opposite limiting case is when the gel film lies in the middle of the cell ($H_1=H_2$) and impermeable ($\alpha\rightarrow 0$). There destabilisation over a wavelength $\lambda$ creates a lubrication ($H\ll\lambda$) flow in the viscous layers. By symmetry the transverse load across the gel $\sigma_\perp$ is also the pressure difference over the wavelength. Using a Poiseuille profile for the flow, $\frac{dA}{dt} \sim \sigma_\perp \frac{H^3}{\eta\lambda^2}$. Injecting this expression in Eq.~(\ref{eq:lstar}) yields the wavelength of the Poiseuille mode as
 \begin{equation}
 \lambda_P \sim (hH)^{1/2} \Upsilon^{1/6}
 \end{equation}
-where we recognize the scaling for the wrinkles of an elastic sheet on a thin ($H\ll\lambda$) elastic substrate~\cite{Cerda2003} where $\Upsilon$ would be the ratio between the flexural modulus of the film and that of the substrate. Indeed within the lubrication approximation or at low Reynolds numbers one can consider a viscous film as elastic with effective Young modulus $3\eta/\tau$~\cite{Biot1957,Boudaoud2001}.
+where we recognize the scaling for the wrinkles of an elastic film on a thin ($H\ll\lambda$) elastic substrate~\cite{Cerda2003} where $\Upsilon$ would be the ratio between the flexural modulus of the film and that of the substrate. Indeed within the lubrication approximation or at low Reynolds numbers one can consider a viscous film as elastic with effective Young modulus $3\eta/\tau$~\cite{Biot1957,Boudaoud2001}.
 
 A more complete derivation of the models can be found in the Supplementary Method and yields the following prefactors:
 \begin{align}
@@ -246,7 +246,7 @@ From these data, we obtain for each stack the volume and thickness of the gel ph
 \subsection*{Characteristic time measurement}
 \begin{figure}
 	\includegraphics{growth}
-	\caption{Growth of the instability. (a) Evolution of the gel velocity $v$ \seb{averaged} over the whole surface. Inset: Evolution of the peak-to-peak amplitude $A(t)$ in semi logarithmic scale. Black line is the best exponential fit with $\tau=\SI{90}{\second}$. (b) Evolution of the bottom profile of the gel from onset of instability (yellow) to contact to both walls (brown). Note that the lateral size of the blister evolves in this regime. Thick black curve is the profile at much longer times. Note that the blister foot (highlighted by the orange vertical line) has not moved since contact. \seb{\it Utiliser des symboles ($t$, $r$,$ A(t)$) plutot que des mots ? + j'ai plusieurs petites questions par rapport a cette figure.}}
+	\caption{Growth of the instability. (a) Evolution of the gel velocity $v$ \seb{averaged} over the whole surface. Inset: Evolution of the peak-to-peak amplitude $A(t)$ in semi logarithmic scale. Black line is the best exponential fit with $\tau=\SI{90}{\second}$. (b) Evolution of the bottom profile of the gel from onset of instability (yellow) to contact to both walls (brown). Note that the longitudinal size of the blister evolves in this regime. Thick black curve is the profile at much longer times. Note that the blister foot (highlighted by the orange vertical line) has not moved since contact. \seb{\it Utiliser des symboles ($t$, $r$,$ A(t)$) plutot que des mots ? + j'ai plusieurs petites questions par rapport a cette figure.}}
 	\label{fig:growth}
 \end{figure}
 
@@ -258,7 +258,7 @@ We note that when both measurements were available (as in Fig.~\ref{fig:growth}a
 
 \subsubsection*{General framework for wrinkling}
 
-The mechanical equilibrium of a plate of thickness $h$, Young modulus $E$ and Poisson ratio $\nu$ submitted to a compression load $\sigma_\parallel$ along $x$ and a lateral load $\sigma_\perp$ along $z$ writes
+The mechanical equilibrium of a plate of thickness $h$, Young modulus $E$ and Poisson ratio $\nu$ submitted to a compression load $\sigma_\parallel$ along $x$ and a transverse load $\sigma_\perp$ along $z$ writes
 \begin{equation}
 \frac{E h^3}{12(1-\nu^2)}\frac{\partial^4 w}{\partial x^4} + \sigma_\parallel h \frac{\partial^2 w}{\partial x^2} = \sigma_\perp,
 \label{eq:mecheq}
@@ -276,7 +276,7 @@ where $B=E/(1-\nu^2)$ is the modulus of the plate.
 
 \seb{\it Vraiment utile de detailler ce cas qui ne correspond pas aux manips ?}
 
-\seb{In the case of an elastic film lying over an infinite elastic medium,} the deformation of the substrate of modulus $B_s$ gives the lateral load as $\sigma_\perp = -k B_s w$, and thus the compression load writes
+\seb{In the case of an elastic film lying over an infinite elastic medium,} the deformation of the substrate of modulus $B_s$ gives the transverse load as $\sigma_\perp = -k B_s w$, and thus the compression load writes
 \begin{equation}
 \sigma_\parallel = B \frac{h^2}{12} k^2 + \frac{B_s}{hk}.
 \label{eq:sigma0}
@@ -291,7 +291,7 @@ Minimizing $\sigma_\parallel$ as a function of $k$ yields the well-known result 
 \seb{\it Anecdotique : pourquoi $\lambda_d$ plutot que $\lambda$ ?}
 
 \subsubsection*{Elastic film on a viscous layer}
-\seb{Let us now turn to the case of an elastic, impermeable film on a viscous layer which is more relevant for the present experimental situation.} Assuming the layer thickness $H$ to be much smaller than $\lambda_d$, we can use the lubrication approximation. \seb{This corresponds to the case where the gel layer is close to one of the cell walls and this specifically applies to secondary blisters.} Further considering only small deflections, we may neglect the displacement of the plate along $x$. The flux along $x$ is thus of the Poiseuille form
+\seb{Let us now turn to the case of an elastic, impermeable film on a viscous layer which is more relevant for the present experimental situation.} Assuming the layer thickness $H$ to be much smaller than $\lambda_d$, we can use the lubrication approximation. \seb{This corresponds to the case where the gel film is close to one of the cell walls and this specifically applies to secondary blisters.} Further considering only small deflections, we may neglect the displacement of the plate along $x$. The flux along $x$ is thus of the Poiseuille form
 \begin{equation}
 Q = -\frac{H^3}{12\eta}\frac{\partial p}{\partial x}.
 \label{eq:PoiseuilleFlux}
@@ -330,7 +330,7 @@ The scaling is then identical to the (much more involved) derivation by \citet{H
 \end{equation}
 
 \subsubsection*{Porous elastic film with no possible Poiseuille flow}
-\seb{Another limiting case is that of a porous elastic film sandwiched between two viscous layers that are supposed to be large enough so that the previous Poiseuille mechanism can be neglected.} The lateral load derives from the Darcy law through the film of permeability $\alpha$:
+\seb{Another limiting case is that of a porous elastic film sandwiched between two viscous layers that are supposed to be large enough so that the previous Poiseuille mechanism can be neglected.} The transverse load derives from the Darcy law through the film of permeability $\alpha$:
 \begin{equation}
 \sigma_\perp = p_1-p_2 = \frac{h\eta}{\alpha}\frac{\partial w}{\partial t}.
 \label{eq:DarcyLoad}
@@ -372,7 +372,7 @@ v = \frac{\alpha}{\eta} \frac{p_1-p_2}{h}.
 \label{eq:Darcy}
 \end{equation}
 
-Combining Eqs.~(\ref{eq:pressures}, \ref{eq:conservationDarcy}, \ref{eq:Darcy}) we obtain the lateral load
+Combining Eqs.~(\ref{eq:pressures}, \ref{eq:conservationDarcy}, \ref{eq:Darcy}) we obtain the transverse load
 \begin{equation}
 \sigma_\perp = p_1-p_2 = - \frac{\eta}{\tau} \frac{w}{\frac{H^3 k^2}{12} + \frac{\alpha}{h}},
 \label{eq:MixtLoad}
